Fix spacing and breaking of lines in open positions section on careers page

--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -77,6 +77,10 @@ p {
 h1 { margin: 0 0 1rem; }
 h2 { margin: 0 0 0.75rem; }
 
+.utilityNoWrap {
+  white-space: nowrap;
+}
+
 /* custom ul with stars instead of bullet points */
 .utilityCustomUL {
   margin: 0;
