--- a/src/pages/careers.module.css
+++ b/src/pages/careers.module.css
@@ -1,3 +1,7 @@
 .headingLifeAtLiftr {
   color: var(--theme-colour-1);
 }
+
+.openPositionsContent {
+  margin-bottom: 2rem;
+}
